[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/SwipeZone.gd" type="Script" id=1]
[ext_resource path="res://Assets/sawswipe.gd" type="Script" id=2]
[ext_resource path="res://addons/swipe-detector/swipe_detector.gd" type="Script" id=3]

[node name="SwipeZone" type="CanvasLayer"]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
charOBJ = null

[node name="SwipeDir" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="SwipeDetector" type="Node" parent="SwipeDir"]
script = ExtResource( 3 )
detect_gesture = true
process_method = "Fixed"
distance_threshold = 25.0
duration_threshold = 0.05
limit_duration = false
maximum_duration = -1.0
minimum_points = 2
limit_points = false
maximum_points = -1
pattern_detection_score_threshold = 80
debug_mode = false

[connection signal="swipe_ended" from="SwipeDir/SwipeDetector" to="SwipeDir" method="_on_SwipeDetector_swipe_ended"]
[connection signal="swipe_updated" from="SwipeDir/SwipeDetector" to="SwipeDir" method="_on_SwipeDetector_swipe_updated"]
[connection signal="swiped" from="SwipeDir/SwipeDetector" to="SwipeDir" method="_on_SwipeDetector_swiped"]
